fixed main content and footer hidding behind header background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,18 +49,45 @@ h1 {
     color: #ffffff;
     letter-spacing: 2px;
     font-size: 20px;
+    text-shadow: -1px -1px 0 rgb(0, 0, 0);
 }
-
 
 /* Main Content*/
 main {
-    background-color: whitesmoke;
-    /* Make main element take up any surplus space to push footer down */
-    flex: 1 0 auto;
+    background-color: rgb(255, 0, 0);
+    flex: 1 0 auto; /* Make main element take up any surplus space to push footer down */
+    color: black;
+    padding-top: 70px;
 }
 
 /* Footer */
 footer {
-    background-color: red;
+    background-color: rgb(0, 255, 85);
 }
 
+
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width:768px) {
+    #navbar ul {
+        justify-content: flex-end;
+        gap: 2rem;
+    }
+
+    #logo {
+        font-size: 75px;
+        text-shadow: -2px -2px 0 rgb(0, 0, 0);
+        position: relative;
+        top: 25px;
+    }
+
+    #navbar ul li a {
+        letter-spacing: 2px;
+        font-size: 30px;
+        text-shadow: -1px -1px 0 rgb(0, 0, 0);
+    }
+
+    header {
+        padding-left: 2rem;
+        padding-top: 1rem;
+    }
+}
